--- a/style.css
+++ b/style.css
@@ -175,9 +175,27 @@ nav ul li a {
     width: 100%;
 
 }
-
-
-
+footer{
+    background-color: rgba(10, 8, 38, 1);
+    max-width:100%;
+    height: 300px;
+    text-align: center;
+    color: rgba(217, 219, 225, 1);
+    padding: 40px;
+}
+footer p{
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.logo i{
+    padding-left: 15px;
+    font-size: 24px;
+    margin-top: 10px;
+}
+.logo a{
+    text-decoration: none;
+    color:rgba(217, 219, 225, 1) ;
+}
 @media screen and (max-width:567px) {
 
     nav h1{
@@ -235,5 +253,8 @@ nav{
 }
 .featured_info{
     margin-top: 20px;
+}
+footer{
+    max-width: 100%;
 }
 }
